# WasmEdge

./: .clang-tidy
.github/workflows/: build-extensions.yml  release.yml
plugins/wasm_bpf/: CMakeLists.txt  README.md  bpf-api.h  func-bpf-map-operate.cpp
test/plugins/wasm_bpf/: CMakeLists.txt
utils/: install.py
utils/wasm_bpf/: install-build-deps.sh
